--- a/text.tex
+++ b/text.tex
@@ -39,16 +39,17 @@
 
 \addbibresource{text.bib}
 
-\titlecz{Rozřazovák -- jazykový rozřazovací test}
-\titleen{Rozřazovák -- language placement test}
-\author{Jakub Hampl}
-\field{12}
+\titlecz{TickoaTTwo -- implementace moderních piškvorek}
+\titleen{TickoaTTwo -- implementation of modern tick-tac-toe}
+\author{Marian Šámal}
+\field{18}
 \school{Gymnázium Jana~Palacha, Pod Vrchem 3421, Mělník 276 01}
 \mentor{Mgr. Markéta Wolfová}
-\mentorstatement{Mgr. Markétě Wolfové}
+\mentorstatement{Mgr. Markéty Wolfové}  % druhý pád (pod vedením koho čeho)
+\region{Středočeský}
+\placefooter{Mělník \the\year}
 
-
-\begin{document}
+%%% correct `book` chapter numbering`%%%
 \titleformat
 {\chapter} % command
 [hang] % shape
@@ -56,78 +57,94 @@
 {\thechapter} % label
 {0ex} % sep
 {
-    \vspace{-2ex}
+	\vspace{-2ex}
 } % before-code
 [
-    \vspace{1ex}
+\vspace{1ex}
 ] % after-code
-	\maketitle
-	\makecopyrightstatement{Mělník}
-	
-	\makethanks{Především děkuji Marianu Šámalovi -- za jeho mentorství a ochotu, za jeho specifický smysl pro humor a za to, že ten test tenkrát odevzdal třikrát.
-	
-	Dále děkuji Mgr. Markétě Wolfové a PaedDr. Daně Hilské za jejich práci při robotickém kroužku, kde se díky nim rozvíjí mnoho nadějných talentů.}
-	
-	\pagestyle{empty}
-	
-	\section*{Anotace}
-    Ve své práci se věnuji tvorbě moderní webové aplikace za účelem testování žáků pro jejich rozdělení do jazykových skupin.
-	
-	\subsection*{Klíčová slova}
-	edukační software, webová aplikace, rozřazovací test
-	
-	\vspace{20mm}
-	
-	\section*{Annotation}
-    In my work I talk about the creation of a modern web application for the purpose of testing students for placing them into language groups.
-	
-	\subsection*{Keywords}
-	education software, web application, placement test
-	
-	\titlespacing{\chapter}{0pt}{0cm}{0pt}
-	\titlespacing{\section}{0pt}{0cm}{0pt}
-	\titlespacing{\subsection}{0pt}{0pt}{0pt}
-	
-	\newpage
-	\pagestyle{plain}
-	\pagenumbering{gobble}
-    \tableofcontents % vysází obsah
-	
-	%%% Začátek práce
-	\setcounter{figure}{0}
-	\setcounter{table}{0}
-	\newpage
-	
-	%%% Úvod
-	\pagenumbering{arabic}
-	\setcounter{page}{9}
-	\input{00uvod.tex}
-	
-	
-	%%% Obsah
-	\input{01design.tex}
-	\input{02technologie.tex}
-	
-	
-	
-	%%% Závěr
-	\input{99zaver.tex}
+%%% / %%%
 
-	\pagenumbering{gobble}
-	\newpage
-	\printbibliography[title=Literatura]
-	\nocite{*}
-	\addcontentsline{toc}{chapter}{Literatura}
-	\renewcommand{\baselinestretch}{1.5} 
+\titlespacing{\chapter}{0pt}{0cm}{0pt}
+\titlespacing{\section}{0pt}{0cm}{0pt}
+\titlespacing{\subsection}{0pt}{0pt}{0pt}
 
-	%\lstlistoflistings
-	%%%\addcontentsline{toc}{chapter}{Seznam programů}{\linespread{1}\selectfont}
-	
-	
-	\listoffigures
-	\addcontentsline{toc}{chapter}{Seznam obrázků}{\linespread{1}\selectfont}
-	
-	
+\begin{document}
 
-	
+%%% Hlavní stránka
+\maketitle
+
+
+%%% Prohlášení
+\makecopyrightstatement{Mělník}
+
+
+%%% Poděkování
+\makethanks{
+	díky bagr
+}
+
+
+%%% Anotace
+\pagestyle{empty}
+
+\section*{Anotace}
+Práce popisuje implementaci hry TickoaTTwo popsané ve videu
+\href{https://www.youtube.com/watch?v=ePxrVU4M9uA}{I Made BETTER Tic-Tac-Toe}
+jako webové aplikace a analýzu této hry z pohledu teorie her.
+
+\subsection*{Klíčová slova}
+piškvorky, tickoattwo, webová aplikace
+
+\vspace{20mm}
+
+\section*{Annotation}
+This thesis describes the implementation of the game TickoaTTwo described in the video
+\href{https://www.youtube.com/watch?v=ePxrVU4M9uA}{I Made BETTER Tic-Tac-Toe}
+as a web application and analyzes it from the game theory point of view.
+
+\subsection*{Keywords}
+tick-tac-toe, tickoattwo, web application
+
+
+%%% Obsah
+\newpage
+\pagestyle{plain}
+\pagenumbering{gobble}
+\tableofcontents % vysází obsah
+
+%%% meta - vlastního textu
+\setcounter{figure}{0}
+\setcounter{table}{0}
+\newpage
+\pagenumbering{arabic}
+\setcounter{page}{9}  %% TODO
+
+%%% Úvod
+\input{00uvod.tex}
+
+
+%%% Obsah
+\input{10analyza.tex}
+\input{20vyvoj.tex}
+
+
+
+%%% Závěr
+\input{99zaver.tex}
+
+\pagenumbering{gobble}
+\newpage
+\printbibliography[title=Literatura]
+\nocite{*}
+\addcontentsline{toc}{chapter}{Literatura}
+\renewcommand{\baselinestretch}{1.5}
+
+%\lstlistoflistings
+%%%\addcontentsline{toc}{chapter}{Seznam programů}{\linespread{1}\selectfont}
+
+
+\listoffigures
+\addcontentsline{toc}{chapter}{Seznam obrázků}{\linespread{1}\selectfont}
+
+
 \end{document}
