--- a/text.bib
+++ b/text.bib
@@ -1,28 +1,35 @@
 @book{hawking1988,
-  title     = "A Brief History of Time: From the {B}ig {B}ang to Black Holes",
-  author    = "Hawking, Stephen",
-  year      = 1988,
-  publisher = "Bantam",
-  address   = "London"
+    title     = "A Brief History of Time: From the {B}ig {B}ang to Black Holes",
+    author    = "Hawking, Stephen",
+    year      = 1988,
+    publisher = "Bantam",
+    address   = "London"
 }
 
 @online{choosealicense,
-  title     = "MIT License",
-  author    = "Github, Inc",
-  url       = "https://choosealicense.com/licenses/mit/",
-  url-date  = {2022-01-10}
+    title     = "MIT License",
+    author    = "Github, Inc",
+    url       = "https://choosealicense.com/licenses/mit/",
+    url-date  = {2022-01-10}
 }
 
 @online{t3stack,
-  title     = "T3 Stack",
-  author    = "Theo Browne",
-  url       = "https://create.t3.gg/en/introduction",
-  url-date  = {2023-04-04}
+    title     = "T3 Stack",
+    author    = "Theo Browne",
+    url       = "https://create.t3.gg/en/introduction",
+    url-date  = {2023-04-04}
 }
 
 @online{nextjs,
-  title     = "Next.js",
-  author    = {{Vercel and the open-source community}},
-  url       = "https://nextjs.org/docs",
-  url-date  = {2023-04-04}
+    title     = "Next.js",
+    author    = {{Vercel and the open-source community}},
+    url       = "https://nextjs.org/docs",
+    url-date  = {2023-04-04}
+}
+
+@online{jenkins22,
+    title       = "I Made BETTER Tic-Tac-Toe",
+    author      = "Oats Jenkins",
+    url         = "https://www.youtube.com/watch?v=ePxrVU4M9uA",
+    url-date    = {2023-05-09},
 }
