--- a/text.bib
+++ b/text.bib
@@ -13,11 +13,12 @@
     url-date  = {2022-01-10}
 }
 
-@online{t3stack,
-    title     = "T3 Stack",
-    author    = "Theo Browne",
+@manual{t3stack,
+    title     = "Introduction -- Create T3 App",
+    author    = "Julius Marminge and others",
     url       = "https://create.t3.gg/en/introduction",
-    url-date  = {2023-04-04}
+    url-date  = {2023-04-04},
+    year      = 2022,
 }
 
 @online{nextjs,
@@ -32,4 +33,5 @@
     author      = "Oats Jenkins",
     url         = "https://www.youtube.com/watch?v=ePxrVU4M9uA",
     url-date    = {2023-05-09},
+    year        = 2022,
 }
