--- a/00uvod.tex
+++ b/00uvod.tex
@@ -15,4 +15,4 @@ V říjnu 2022 vydal americký youtuber Oats Jenkins video
 \href{https://www.youtube.com/watch?v=ePxrVU4M9uA}{I Made BETTER Tic-Tac-Toe}
 (Udělal jsem lepší piškvorky) \cite{jenkins22}. V něm popisuje \enquote{americké} 3x3 piškvorky a jejich
 problémy. Následně přichází s upravenou verzí hry, ve které jsou dané problémy vyřešeny.
-Alternativa se jmenuje TickoaTTwo a například v ní nelze dojít k remíze.
+Alternativa se jmenuje TickoaTTwo. Tato práce popisuje výhody a nevýhody nové hry, analyzuje ji z pohledu teorie her.
