--- a/socthesis.cls
+++ b/socthesis.cls
@@ -9,9 +9,10 @@
 \RequirePackage{array}
 \RequirePackage[bookmarksopen,colorlinks,plainpages=false,linkcolor=black,urlcolor=blue,citecolor=black,filecolor=black,menucolor=black,unicode=true,breaklinks]{hyperref}
 \RequirePackage{csquotes}
-\RequirePackage[backend=bibtex,bibstyle=numeric,sorting=none,date=long,dateabbrev=false,texencoding=utf8,bibencoding=utf8,style=iso-numeric]{biblatex}
+\RequirePackage[backend=biber,bibstyle=numeric,sorting=none,date=long,dateabbrev=false,texencoding=utf8,bibencoding=utf8,style=authoryear]{biblatex}
 \RequirePackage{caption}
 
+\DeclareDelimFormat{nameyeardelim}{\addcomma\space}
 
 %%%%%% PŘÍKAZY
 \newcommand{\B}{\textbf} % tučné písmo
