--- a/text.bib
+++ b/text.bib
@@ -35,3 +35,23 @@
     url-date    = {2023-05-09},
     year        = 2022,
 }
+
+@article{crowley1993,
+    title={Flexible strategy use in young children's tic-tac-toe},
+    author={Crowley, Kevin and Siegler, Robert S},
+    journal={Cognitive Science},
+    volume={17},
+    number={4},
+    pages={531--561},
+    year={1993},
+    publisher={Elsevier},
+    url="https://onlinelibrary.wiley.com/doi/pdfdirect/10.1207/s15516709cog1704_3",
+}
+
+@online{stackoverflow23,
+    author={{S}tack {O}verflow},
+    title={{S}tack {O}verflow Developer Survey 2023},
+    url={https://survey.stackoverflow.co/2023/},
+    date={2023-06-14},
+    urldate={2023-11-19},
+}
