--- a/text.tex
+++ b/text.tex
@@ -20,8 +20,10 @@
 \usepackage{float}
 \usepackage{titlesec}
 \usepackage[bottom, hang, flushmargin]{footmisc}
-\usepackage{xcolor}
+% \usepackage{xcolor}
 \usepackage{listings}
+\usepackage{jslistings}
+\usepackage{prismalistings}
 \input{ColorSyntax}
 \renewcommand{\lstlistingname}{Program}
 \renewcommand{\lstlistlistingname}{Seznam programů}
