--- a/text.bib
+++ b/text.bib
@@ -1,18 +1,3 @@
-@book{hawking1988,
-    title     = "A Brief History of Time: From the {B}ig {B}ang to Black Holes",
-    author    = "Hawking, Stephen",
-    year      = 1988,
-    publisher = "Bantam",
-    address   = "London"
-}
-
-@online{choosealicense,
-    title     = "MIT License",
-    author    = "Github, Inc",
-    url       = "https://choosealicense.com/licenses/mit/",
-    url-date  = {2022-01-10}
-}
-
 @manual{t3stack,
     title     = "Introduction -- Create T3 App",
     author    = "Julius Marminge and others",
@@ -33,7 +18,7 @@
     author      = "Oats Jenkins",
     url         = "https://www.youtube.com/watch?v=ePxrVU4M9uA",
     url-date    = {2023-05-09},
-    year        = 2022,
+    date        = {2022-10-28}
 }
 
 @article{crowley1993,
@@ -54,4 +39,11 @@
     url={https://survey.stackoverflow.co/2023/},
     date={2023-06-14},
     urldate={2023-11-19},
+}
+
+@online{mdn-ws,
+    title={The WebSocket API (WebSockets)},
+    url={https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API},
+    author={{Mozilla Developer Network}},
+    urldate={2023-11-22}
 }
