--- a/text.tex
+++ b/text.tex
@@ -25,8 +25,8 @@
 \usepackage{jslistings}
 \usepackage{prismalistings}
 \input{ColorSyntax}
-\renewcommand{\lstlistingname}{Program}
-\renewcommand{\lstlistlistingname}{Seznam programů}
+\renewcommand{\lstlistingname}{Úryvek}
+\renewcommand{\lstlistlistingname}{Seznam úryvků kódu}
 \usepackage[left=3.5cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
 
 \newcommand*{\noaddvspace}{\renewcommand*{\addvspace}[1]{}}
@@ -141,8 +141,8 @@ tick-tac-toe, tickoattwo, web application
 \addcontentsline{toc}{chapter}{Literatura}
 \renewcommand{\baselinestretch}{1.5}
 
-%\lstlistoflistings
-%%%\addcontentsline{toc}{chapter}{Seznam programů}{\linespread{1}\selectfont}
+\lstlistoflistings
+\addcontentsline{toc}{chapter}{Seznam programů}{\linespread{1}\selectfont}
 
 
 \listoffigures
