--- a/10analyza.tex
+++ b/10analyza.tex
@@ -1,7 +1,7 @@
 \chapter{Analýza a pravidla hry}
 
 \section{Pravidla}
-Pravidla hry TickoaTTwo jako první určil \textcite{jenkins22}.
+Pravidla hry TickoaTTwo jako první určil americký youtuber Oats Jenkins \cite{jenkins22}.
 
 Stejně jako tradiční piškvorky, hra TickoaTTwo se hraje na hrací ploše o
 velikosti 3x3. Hrací plocha má dle původní definice hry specifický vzhled jako
@@ -41,14 +41,12 @@ znaky v jedné vertikále/horizontále/diagonále, protože tím bychom dali
 protihráči možnost je jednoduše doplnit a vyhrát. Nejhorší herní políčko je
 tedy to prostřední, protože se v něm protínají hned čtyři
 vertikály/horizontály/diagonály (na rozdíl od klasických piškvorek, kde
-prostřední políčko je nejvíce žádané ZDROJ BLBOST ASI)
+prostřední políčko je jedno z nejvíce žádaných \cite{xkcd832})
 
 Optimální strategie pro druhého hráče je co nejdéle hrát naproti prvnímu hráči.
 Jelikož první hráč nechce zabrat tři sousední políčka nebo hrát doprostřed, hra
 se dostane do stavu, kde je šest políček plně zaplněno, uprostřed je jedna
 volná diagonála a na tahu je první hráč, viz obrázek \ref{fig:empty-diagonal}
-
-% TODO obrázek :)
 
 \begin{figure}[h]
     \centering
