--- a/text.bib
+++ b/text.bib
@@ -37,7 +37,7 @@
     author={{S}tack {O}verflow},
     title={{S}tack {O}verflow Developer Survey 2023},
     url={https://survey.stackoverflow.co/2023/},
-    date={2023-06-14},
+    date={2023},
     urldate={2023-11-19},
 }
 
@@ -46,4 +46,19 @@
     url={https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API},
     author={{Mozilla Developer Network}},
     urldate={2023-11-22}
+}
+
+@online{xkcd832,
+    title={Tic-Tac-Toe},
+    author={Randall Munroe},
+    url={https://xkcd.com/832/},
+    date={2010},
+}
+
+@book{seddon2011,
+  title={Thou Shall Not Use Comic Sans: 365 Graphic Design Sins and Virtues: A Designer's Almanac of Dos and Don'ts},
+  % author={Seddon, Tony and Adams, Sean and Foster, John and Dawson, Peter},
+  author={Sean Adams and Peter Dawson and John Foster and Tony Seddon},
+  year={2011},
+  publisher={Peachpit Press}
 }
